--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
                 color: black;
                 line-height: 1.4;}
             }
- @media and (max-width:757px) {
+ @media (max-width:757px) {
                body {background-color: #77dde7;
                 color: darkred;
                 line-height: 1.4;
